# n-fold-solver

./: .gitignore  CMakeLists.txt  README.md  build.sh  compile.sh  main.cpp  static_compile.sh  static_compile_name.sh  static_main.cpp
.github/workflows/: run_tests.yml
bench/: CMakeLists.txt  example_bench.cc  example_bench.cpp  solution_bench.cpp
cmake/: GoogleBenchmark.cmake
input/: input-huge.in  max-large.in
input/max/: max-small.in
lp_solvers/glpk/: do.sh  to_glpk.cc
src/: CMakeLists.txt  NFold.cpp  Solver.cpp  bruteforce.cc  bruteforce.cpp  main.cc  main.cpp  nFold.cc  nfold_class.cpp  nfold_class.hh  prefix_tree_class.hh  solver_class.cpp  solver_class.hh  split_tree_class.cpp  split_tree_class.hh  static_nfold_class.cpp  static_solver_class.cpp  template.h  template.hh  utils.hh
test/: CMakeLists.txt  all_tests.cc  brute_test.cc  brute_test.cpp  example_test.cc  example_test.cpp  solver_test.cpp
